[gd_scene load_steps=4 format=1]

[ext_resource path="res://assets/theme/igs_taxi_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/screens/SettingsMenu.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]

resource/name = "TitleAnimation"
length = 13.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu/VBoxContainer/TitleFrame:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2, 8, 8.0001, 11.4, 11.4, 12.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 23, 0, 0, 23, 0 ]
}

[node name="SettingsMenu" type="Panel" groups=[
"screen",
]]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 1024, 768 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="SettingsBox" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/min_size = Vector2( 600, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 300.0
margin/top = 183.0
margin/right = -300.0
margin/bottom = -22.0
alignment = 0

[node name="GridContainer" type="GridContainer" parent="SettingsBox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 605.0
margin/bottom = 197.0
custom_constants/hseparation = 20
columns = 2

[node name="CRTEffectLabel1" type="Label" parent="SettingsBox/GridContainer"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 335.0
margin/bottom = 28.0
text = "CRT Effect Enabled?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CRTEffectEnabled" type="CheckBox" parent="SettingsBox/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 355.0
margin/top = 0.0
margin/right = 605.0
margin/bottom = 33.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="CRTStrengthLabel" type="Label" parent="SettingsBox/GridContainer"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 37.0
margin/right = 335.0
margin/bottom = 61.0
text = "CRT Scanline Opacity"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CRTScanlineOpacity" type="HSlider" parent="SettingsBox/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 355.0
margin/top = 45.0
margin/right = 605.0
margin/bottom = 53.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="CRTColorBleedingLabel" type="Label" parent="SettingsBox/GridContainer"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 65.0
margin/right = 335.0
margin/bottom = 89.0
text = "CRT Color Bleeding Distance"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CRTColorBleedingDistance" type="HSlider" parent="SettingsBox/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 355.0
margin/top = 73.0
margin/right = 605.0
margin/bottom = 81.0
range/min = 0.0
range/max = 4.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="CRTColorBleedingLabel1" type="Label" parent="SettingsBox/GridContainer"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 93.0
margin/right = 335.0
margin/bottom = 117.0
text = "CRT Color Bleeding Strength"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CRTColorBleeding" type="HSlider" parent="SettingsBox/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 355.0
margin/top = 101.0
margin/right = 605.0
margin/bottom = 109.0
range/min = 0.0
range/max = 4.0
range/step = 0.05
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Filler" type="Control" parent="SettingsBox/GridContainer"]

rect/min_size = Vector2( 250, 20 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 121.0
margin/right = 335.0
margin/bottom = 141.0

[node name="Filler1" type="Control" parent="SettingsBox/GridContainer"]

rect/min_size = Vector2( 250, 20 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 355.0
margin/top = 121.0
margin/right = 605.0
margin/bottom = 141.0

[node name="MusicVolumeLabel" type="Label" parent="SettingsBox/GridContainer"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 145.0
margin/right = 335.0
margin/bottom = 169.0
text = "Music Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MusicVolume" type="HSlider" parent="SettingsBox/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 355.0
margin/top = 153.0
margin/right = 605.0
margin/bottom = 161.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="SoundVolumeLabel1" type="Label" parent="SettingsBox/GridContainer"]

rect/min_size = Vector2( 250, 0 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 173.0
margin/right = 335.0
margin/bottom = 197.0
text = "SFX Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SFXVolume" type="HSlider" parent="SettingsBox/GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 355.0
margin/top = 181.0
margin/right = 605.0
margin/bottom = 189.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="HBoxContainer 2" type="HBoxContainer" parent="SettingsBox"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 212.0
margin/right = 605.0
margin/bottom = 240.0
custom_constants/separation = 20
alignment = 0

[node name="SaveChangesButton" type="Button" parent="SettingsBox/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 292.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save Changes"
flat = false

[node name="DiscardChangesButton" type="Button" parent="SettingsBox/HBoxContainer 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 312.0
margin/top = 0.0
margin/right = 605.0
margin/bottom = 28.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Discard Changes"
flat = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/TitleAnimation = SubResource( 1 )
playback/active = true
playback/speed = 1.5
blend_times = [  ]
autoplay = ""

[connection signal="input_event" from="SettingsBox/GridContainer/SFXVolume" to="." method="_on_SFXVolume_input_event"]

[connection signal="pressed" from="SettingsBox/HBoxContainer 2/SaveChangesButton" to="." method="_on_SaveChangesButton_pressed"]

[connection signal="pressed" from="SettingsBox/HBoxContainer 2/DiscardChangesButton" to="." method="_on_DiscardChangesButton_pressed"]


